--- a/background.html
+++ b/background.html
@@ -5,5 +5,6 @@
 	<!-- read more about this page here: https://developer.chrome.com/extensions/background_pages.html -->
   </head>
   <body>
+  	<p>"Hello world"</p>
   </body>
 </html>
