--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Background Page</title>
+    <title>Buzzword</title>
 	<!-- read more about this page here: https://developer.chrome.com/extensions/background_pages.html -->
-	 
+	 <style>
+      body {
+        min-width: 357px;
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
+  	<p>FizzBuzzword</p>
   </body>
 </html>
